# Energy-Data-Extraction-and-MongoDB-Storage-2000-2024-

./: .gitignore  ReadMe.md  Scrap_Script.py  export_to_csv.py  main.py  pyproject.toml  run_pipeline.py
aep_etl/: _init_.py  config.py  constants.py  main.py  stage1_scrape.py  stage2_format.py  stage3_store.py  stage4_validate.py  types_.py  utils.py
